--- a/data/sources/ruby-praha.yaml
+++ b/data/sources/ruby-praha.yaml
@@ -581,7 +581,7 @@ series:
         dtstart: 2022-04-06 19:00:00+02:00
         dtend: 2022-04-06 22:00:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Sep 7, 7:00 PM  CEST: '
+      meta_description: Find Meetup events so you can do more of what matters to you. Or create your own group and meet people near you who share your interests.
       og_title: First Wednesday Of The Month - Ruby, Wed, Sep 7, 2022, 7:00 PM   | Meetup
       url: https://www.meetup.com/praguerb/events/dkmktfydcmbkb/
       ical:
@@ -4109,9 +4109,9 @@ series:
         dtstart: 2022-07-06 19:00:00+02:00
         dtend: 2022-07-06 22:00:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Aug 3, 7:00 PM  CEST: '
-      og_title: First Wednesday Of The Month - Ruby, Wed, Aug 3, 2022, 7:00 PM   | Meetup
-      url: https://www.meetup.com/praguerb/events/dkmktfydclbfb/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: First Wednesday Of The Month - Ruby
         description: 'Prague.rb / CSRUG
@@ -4119,14 +4119,14 @@ series:
           Wednesday, August 3 at 7:00 PM
 
 
-          https://www.meetup.com/Praguerb/events/dkmktfydclbfb/'
+          https://www.meetup.com/praguerb/events/287188515/'
         location: null
         geo:
           lat: 50.08
           lon: 14.43
         status: CONFIRMED
         uid: event_dkmktfydclbfb@meetup.com
-        url: https://www.meetup.com/Praguerb/events/dkmktfydclbfb/
+        url: https://www.meetup.com/praguerb/events/287188515/
         dtstart: 2022-08-03 19:00:00+02:00
         dtend: 2022-08-03 22:00:00+02:00
   - meetupcom:
@@ -7280,7 +7280,7 @@ series:
         dtstart: 2022-09-07 19:00:00+02:00
         dtend: 2022-09-07 22:00:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Oct 5, 7:00 PM  CEST: '
+      meta_description: Find Meetup events so you can do more of what matters to you. Or create your own group and meet people near you who share your interests.
       og_title: First Wednesday Of The Month - Ruby, Wed, Oct 5, 2022, 7:00 PM   | Meetup
       url: https://www.meetup.com/praguerb/events/dkmktfydcnbhb/
       ical:
@@ -8120,7 +8120,7 @@ series:
         dtstart: 2022-06-01 19:00:00+02:00
         dtend: 2022-06-01 22:00:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Nov 2, 7:00 PM  CET: '
+      meta_description: Find Meetup events so you can do more of what matters to you. Or create your own group and meet people near you who share your interests.
       og_title: First Wednesday Of The Month - Ruby, Wed, Nov 2, 2022, 7:00 PM   | Meetup
       url: https://www.meetup.com/praguerb/events/dkmktfydcpbdb/
       ical:
@@ -8330,7 +8330,7 @@ series:
         dtstart: 2022-07-06 19:00:00+02:00
         dtend: 2022-07-06 22:00:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Dec 7, 7:00 PM  CET: '
+      meta_description: Find Meetup events so you can do more of what matters to you. Or create your own group and meet people near you who share your interests.
       og_title: First Wednesday Of The Month - Ruby, Wed, Dec 7, 2022, 7:00 PM   | Meetup
       url: https://www.meetup.com/praguerb/events/dkmktfydcqbkb/
       ical:
