--- a/data/sources/pyvo-praha.yaml
+++ b/data/sources/pyvo-praha.yaml
@@ -169,7 +169,7 @@ series:
         dtstart: 2022-07-20 19:00:00+02:00
         dtend: 2022-07-20 23:59:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Aug 17, 7:00 PM  CEST: Máme léto a s ním tradičně odlehčený program. Opět se potkáme v kavárně volnočasového centra H55. (https://www.h55.cz/)
+      meta_description: 'Máme léto a s ním tradičně odlehčený program. Opět se potkáme v kavárně volnočasového centra H55. (https://www.h55.cz/)
 
 
         Tentokrát bude before-party od 16 hodin pro fanoušk'
@@ -3201,7 +3201,7 @@ series:
         dtstart: 2022-08-17 19:00:00+02:00
         dtend: 2022-08-17 23:59:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Sep 21, 7:00 PM  CEST: We will meet for an informal chat about Python, programming, and more. Details will be added.'
+      meta_description: We will meet for an informal chat about Python, programming, and more. Details will be added.
       og_title: 'Pyvo Prague #, Wed, Sep 21, 2022, 7:00 PM   | Meetup'
       url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydcmbcc/
       ical:
@@ -8772,7 +8772,7 @@ series:
         dtstart: 2022-05-18 19:00:00+02:00
         dtend: 2022-05-18 23:59:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Oct 19, 7:00 PM  CEST: We will meet for an informal chat about Python, programming, and more. Details will be added.'
+      meta_description: We will meet for an informal chat about Python, programming, and more. Details will be added.
       og_title: 'Pyvo Prague #, Wed, Oct 19, 2022, 7:00 PM   | Meetup'
       url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydcnbzb/
       ical:
@@ -9486,7 +9486,7 @@ series:
         dtstart: 2022-06-15 19:00:00+02:00
         dtend: 2022-06-15 23:59:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Nov 16, 7:00 PM  CET: We will meet for an informal chat about Python, programming, and more. Details will be added.'
+      meta_description: We will meet for an informal chat about Python, programming, and more. Details will be added.
       og_title: 'Pyvo Prague #, Wed, Nov 16, 2022, 7:00 PM   | Meetup'
       url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydcpbvb/
       ical:
@@ -9509,6 +9509,29 @@ series:
         url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydcpbvb/
         dtstart: 2022-11-16 19:00:00+01:00
         dtend: 2022-11-16 23:59:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Pyvo Prague 134 - summer barbecue edition
+        description: 'Pyvo: Prague Python Meetup
+
+          Wednesday, July 20 at 7:00 PM
+
+          \nMáme léto a s ním tradičně odlehčený program. Vyzkoušíme, jak by se nám fungovalo v kavárně volnočasového centra H55 (https://www.h55.cz/).  K dispozi...
+
+
+          https://www.meetup.com/pyvo-prague-python-meetup/events/287180648/'
+        location: Volnočasové centrum H55 (Hloubětínská 1138/5, Praha-Praha 14, Czech Republic 198 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_bcxlssydckbbc@meetup.com
+        url: https://www.meetup.com/pyvo-prague-python-meetup/events/287180648/
+        dtstart: 2022-07-20 19:00:00+02:00
+        dtend: 2022-07-20 23:59:00+02:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
