--- a/data/sources/typedb-prague.yaml
+++ b/data/sources/typedb-prague.yaml
@@ -9367,3 +9367,27 @@ series:
         url: https://www.meetup.com/typedb-prague/events/287612662/
         dtstart: 2022-08-16 18:30:00+02:00
         dtend: 2022-08-16 19:30:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Building a Distributed Database With the Raft Replication Algorithm
+        description: 'TypeDB Prague Engineers
+
+          Tuesday, August 16 at 6:30 PM
+
+
+          **Talk Summary**Applications running on production have much higher requirements. Not only do they need to be correct, they also need to be "always-on...
+
+
+          https://www.meetup.com/typedb-prague/events/287612662/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_287612662@meetup.com
+        url: https://www.meetup.com/typedb-prague/events/287612662/
+        dtstart: 2022-08-16 18:30:00+02:00
+        dtend: 2022-08-16 19:30:00+02:00
