--- a/data/sources/pragueaws.yaml
+++ b/data/sources/pragueaws.yaml
@@ -13933,10 +13933,10 @@ series:
       meta_description: 'We would like to invite you for the next Prague AWS User Group Community Meetup at Pure Storage.
 
 
-        There will be two speakers with the following presentations:
+        There will be three speakers with the following presentations:
 
 
-        • Optimizing'
+        • Optimizi'
       og_title: Regular Prague AWS User Group Meetup, Wed, Sep 7, 2022, 5:30 PM   | Meetup
       url: https://www.meetup.com/prague-aws-meetup/events/287394375/
       ical:
@@ -13946,7 +13946,7 @@ series:
           Wednesday, September 7 at 5:30 PM
 
 
-          We would like to invite you for the next Prague AWS User Group Community Meetup at Pure Storage. There will be two speakers with the following present...
+          We would like to invite you for the next Prague AWS User Group Community Meetup at Pure Storage. There will be three speakers with the following prese...
 
 
           https://www.meetup.com/prague-aws-meetup/events/287394375/'
@@ -13959,6 +13959,30 @@ series:
         url: https://www.meetup.com/prague-aws-meetup/events/287394375/
         dtstart: 2022-09-07 17:30:00+02:00
         dtend: 2022-09-07 19:30:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Regular Prague AWS User Group Meetup
+        description: 'Prague AWS User Group
+
+          Wednesday, October 20 at 6:00 PM
+
+
+          We would like to invite you for next Prague AWS User Group Community Meetup at MSD IT. There will be two speakers with the following presentations: • ...
+
+
+          https://www.meetup.com/prague-aws-meetup/events/280751506/'
+        location: MSD IT Global Innovation Center - Five (FIVE, Na Valentince 3336/4, 150 00, Prague, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_280751506@meetup.com
+        url: https://www.meetup.com/prague-aws-meetup/events/280751506/
+        dtstart: 2021-10-20 18:00:00+02:00
+        dtend: 2021-10-20 20:00:00+02:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
