--- a/data/sources/typedb-prague.yaml
+++ b/data/sources/typedb-prague.yaml
@@ -9461,3 +9461,52 @@ series:
         url: https://www.meetup.com/typedb-prague/events/287612812/
         dtstart: 2022-08-18 18:30:00+02:00
         dtend: 2022-08-18 19:30:00+02:00
+  - meetupcom:
+      meta_description: '**Talk Synopsis**
+
+        TypeDB is a strongly-typed database. It provides a rich and logical type system which breaks down complex problems into meaningful and logical systems, us'
+      og_title: Introduction to TypeDB and TypeQL | A Strongly-Typed Database, Tue, Sep 13, 2022, 6:30 PM   | Meetup
+      url: https://www.meetup.com/typedb-prague/events/287924523/
+      ical:
+        summary: Introduction to TypeDB and TypeQL | A Strongly-Typed Database
+        description: 'TypeDB Prague Engineers
+
+          Tuesday, September 13 at 6:30 PM
+
+          \n**Talk Synopsis**TypeDB is a strongly-typed database. It provides a rich and logical type system which breaks down complex problems into meaningful an...
+
+
+          https://www.meetup.com/typedb-prague/events/287924523/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_287924523@meetup.com
+        url: https://www.meetup.com/typedb-prague/events/287924523/
+        dtstart: 2022-09-13 18:30:00+02:00
+        dtend: 2022-09-13 19:30:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Enabling the Computational Future of Biology
+        description: 'TypeDB Prague Engineers
+
+          Thursday, August 18 at 6:30 PM
+
+
+          **Talk Summary**Computational biology has revolutionised biomedicine. The volume of data it is generating is growing exponentially. This requires tool...
+
+
+          https://www.meetup.com/typedb-prague/events/287612812/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_287612812@meetup.com
+        url: https://www.meetup.com/typedb-prague/events/287612812/
+        dtstart: 2022-08-18 18:30:00+02:00
+        dtend: 2022-08-18 19:30:00+02:00
