--- a/data/sources/strv.yaml
+++ b/data/sources/strv.yaml
@@ -10513,3 +10513,26 @@ series:
         url: https://www.meetup.com/strv-meetups/events/287693096/
         dtstart: 2022-08-18 18:30:00+02:00
         dtend: 2022-08-18 21:30:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Web3 Meetup Vol. 3
+        description: 'STRV Meetups
+
+          Thursday, August 18 at 6:30 PM
+
+
+          (https://events.enter.xyz/event/strv-web3-meetup) Join this month’s edition of our STRV Web3 Meetups — regular fireside chats about NFTs, blockchain, ...\n
+
+          https://www.meetup.com/strv-meetups/events/287693096/'
+        location: STRV Prague (Rohanske nabrezi 678/23, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_287693096@meetup.com
+        url: https://www.meetup.com/strv-meetups/events/287693096/
+        dtstart: 2022-08-18 18:30:00+02:00
+        dtend: 2022-08-18 21:30:00+02:00
