--- a/data/sources/purestorage.yaml
+++ b/data/sources/purestorage.yaml
@@ -16433,7 +16433,7 @@ series:
           Wednesday, August 31 at 5:30 PM
 
 
-          Let’s have a cold beer at the next **Go MeetUp** and celebrate the last day of summer!  Almost everyone has heard of Go and how it is used by now, but...
+          Let’s have a cold beer at the next **Go MeetUp** and celebrate the last day of summer! Almost everyone has heard of Go and how it is used by now, but ...
 
 
           https://www.meetup.com/pure-storage-talks/events/287928146/'
@@ -16446,6 +16446,30 @@ series:
         url: https://www.meetup.com/pure-storage-talks/events/287928146/
         dtstart: 2022-08-31 17:30:00+02:00
         dtend: 2022-08-31 20:30:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Stand out from the crowd. How to land a highly-paid technical job.
+        description: 'Pure Storage Talks
+
+          Thursday, June 30 at 5:30 PM
+
+
+          \\*\\*Make sure you book your spot at (https://www.eventbrite.com/e/stand-out-from-the-crowd-how-to-land-a-highly-paid-technical-job-registration-367486...
+
+
+          https://www.meetup.com/pure-storage-talks/events/286587285/'
+        location: Amazon Court (Rohanské nábř. 661/5, Rohanský ostrov, Praha-Praha 8, Czech Republic 186 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286587285@meetup.com
+        url: https://www.meetup.com/pure-storage-talks/events/286587285/
+        dtstart: 2022-06-30 17:30:00+02:00
+        dtend: 2022-06-30 20:00:00+02:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
